# fastapi-mongodb

./: .commitlintrc.yaml  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflow/: code.yml
.github/workflows/: code.yml
app/: main.py
app/config/: db.py  settings.py
app/helpers/: save_picture.py  utils.py
app/models/: user.py
app/routes/: default_routes.py  user_routes.py
app/schemas/: serialize_objects.py  user.py
app/services/: user_service.py
nginx/: nginx.conf
tests/utils/: utils_test.py
